--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@react-three/fiber": "^8.5.0",
 		"embla-carousel-react": "^7.0.1",
 		"next": "12.2.5",
+		"next-themes": "^0.2.1",
 		"react": "^18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.4.0",
